fixed overlapping section in the article

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -342,7 +342,7 @@ div.iceland {
 .content__container section {
     height: auto;
     min-height: 100%;
-    overflow: auto;
+    // overflow: auto;
 
     &::-webkit-scrollbar {
         display: none;
